# lapstore

./: .gitignore  README.md  package-lock.json  package.json
fastapi-products-backend/: .env.example  README.md  pyproject.toml
fastapi-products-backend/app/: main.py
fastapi-products-backend/app/core/: config.py
fastapi-products-backend/app/crud/: product.py
fastapi-products-backend/app/db/: init_db.py  laptops.seed.json  seed_laptops.py  session.py
fastapi-products-backend/app/models/: product.py
fastapi-products-backend/app/routers/: chat.py  products.py
fastapi-products-backend/app/schemas/: chat.py  product.py
fastapi-products-backend/app/services/: chat_local.py  openai_chat.py
laptops-frontend/: .npmrc  README.md  next.config.ts  package-lock.json  package.json
laptops-frontend/src/app/: globals.css  layout.tsx  page.tsx
laptops-frontend/src/components/: AddToCartButton.tsx  AnalyzeWithAIButton.tsx  AppProviders.tsx  AppState.tsx  ChatWidget.tsx  FiltersBar.tsx  Hero.tsx  LayoutShell.tsx  ProductCard.tsx  ProductCardSkeleton.tsx  ProductCompareToggle.tsx  ProductImageGallery.tsx  ProductWishlistToggle.tsx  RevealOnScroll.tsx  ShopByCategory.tsx  SiteFooter.tsx  SiteHeader.tsx
laptops-frontend/src/context/: cartContext.tsx  confirmContext.tsx  languageContext.tsx  toastContext.tsx
laptops-frontend/src/i18n/: en.ts  ro.ts
laptops-frontend/src/lib/: adminAuth.ts  adminProducts.ts  api.ts  productInsights.ts  types.ts  userAuth.ts  utils.ts
laptops-frontend/src/store/: useChatStore.ts  (+5 more)
scripts/: dev-all-free.sh  stop-all-dev.sh
(+16 files in other folders)
